2023-09-05T08:10:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6081927278 # 1164
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 4 4136
* notice: prev accum: outdated-unq outdated-all / unq all: 1660 155115 / 1689 159310
* notice: next accum: outdated-unq outdated-all / unq all: 1660 155115 / 1692 159417
* notice: prev exec diff / last date diff / accum: unq all: +3 +107 -0 -112 / +3 +107 -0 -0 / 3 107
* notice: removed / changed dates: [] / [2023-08-22 2023-09-05]

2023-09-05T00:35:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6078770192 # 1163
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 4 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1658 154817 / 1689 159217
* notice: next accum: outdated-unq outdated-all / unq all: 1660 155115 / 1689 159310
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -54 / +3 +299 -0 -0 / 3 299
* notice: removed / changed dates: [2023-08-21] / [2023-08-22 2023-09-04]

2023-09-04T16:09:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6075683769 # 1162
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 4 4143
* notice: prev accum: outdated-unq outdated-all / unq all: 1658 154817 / 1689 159124
* notice: next accum: outdated-unq outdated-all / unq all: 1658 154817 / 1689 159217
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -90 / +3 +206 -0 -0 / 3 206
* notice: removed / changed dates: [] / [2023-08-21 2023-09-04]

2023-09-04T08:10:55Z: