@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-05T08:10:44Z",
+  "timestamp" : "2023-09-05T16:09:56Z",
   "count_outdated" : 155115,
   "uniques_outdated" : 1660,
-  "count" : 159417,
+  "count" : 159508,
   "uniques" : 1692,
   "clones" : [
     {
       "timestamp": "2023-08-22T00:00:00Z",
-      "count": 132,
-      "count_minmax": [ 111, 298 ],
-      "count_decinc": [ 166, 298 ],
+      "count": 40,
+      "count_minmax": [ 40, 298 ],
+      "count_decinc": [ 258, 298 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-09-05T00:00:00Z",
-      "count": 107,
-      "count_minmax": [ 107, 107 ],
-      "count_decinc": [ 0, 107 ],
+      "count": 198,
+      "count_minmax": [ 107, 198 ],
+      "count_decinc": [ 0, 198 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
