@@ -1,10 +1,10 @@
 {
-  "count": 4136,
+  "count": 4135,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-08-22T00:00:00Z",
-      "count": 132,
+      "count": 40,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-09-05T00:00:00Z",
-      "count": 107,
+      "count": 198,
       "uniques": 3
     }
   ]
