@@ -1,3 +1,12 @@
+2023-09-05T16:09:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6087140027 # 1165
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
+* notice: last 14d: unq all: 4 4135
+* notice: prev accum: outdated-unq outdated-all / unq all: 1660 155115 / 1692 159417
+* notice: next accum: outdated-unq outdated-all / unq all: 1660 155115 / 1692 159508
+* notice: prev exec diff / last date diff / accum: unq all: +0 +91 -0 -92 / +3 +198 -0 -0 / 3 198
+* notice: removed / changed dates: [] / [2023-08-22 2023-09-05]
+
 2023-09-05T08:10:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6081927278 # 1164
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
